hphp/hack/test/typecheck/sealed/enum.php.exp
File "enum.php", line 4, characters 6-6:
An enum cannot be sealed (Typing[4245])
