hphp/hack/test/typecheck/sealed/enum.php
<?hh // strict

<<__Sealed(B::class)>>
enum A: int {
  FOO = 1;
}

abstract class B {}
